Add Consumable conversion support

--- a/src/SwStarship.Core/SwStarship.Core.csproj
+++ b/src/SwStarship.Core/SwStarship.Core.csproj
@@ -4,4 +4,12 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Util\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Enums.NET" Version="3.0.3" />
+  </ItemGroup>
+
 </Project>
