Final code + tests

--- a/src/SwStarship.App/SwStarship.App.csproj
+++ b/src/SwStarship.App/SwStarship.App.csproj
@@ -9,6 +9,11 @@
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="3.1.2" />
     <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="3.1.2" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="3.1.2" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\SwStarship.Core\SwStarship.Core.csproj" />
   </ItemGroup>
 
   <ItemGroup>
